--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Halloween</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
@@ -28,8 +28,10 @@
         <h2>Halloween als Party-Event erobert Deutschland</h2>
         <p>Zu einem Party-Event entwickelte sich Halloween erst, als irische Einwanderer den Brauch im 19. Jahrhundert nach Amerika brachten. Dort wird Halloween mit Monster-Kostümen, Gehirn-Wackelpudding und Friedhofs-Romantik gefeiert - und hat einen ähnlichen Stellenwert wie hierzulande der Karneval. Diese amerikanische, lustige Variante des Halloween-Festes hat inzwischen auch Deutschland erobert.</p>
         <h2>Jack O'Lantern: Kürbis-Laterne soll dem Teufel trotzen</h2>
-        <img src="img/bild-02.jpg" id="ZweitesBild" alt="Drei geschnitzte Halloween-Kürbisse auf einer Bank © imago images/Arnulf Hettrich Foto: Thomas Frey">
-        <p>Das Licht im ausgehöhlten Kürbis soll den Teufel und böse Geister fernhalten.</p>
+        <div>
+            <img src="img/bild-02.jpg" id="ZweitesBild" alt="Drei geschnitzte Halloween-Kürbisse auf einer Bank © imago images/Arnulf Hettrich Foto: Thomas Frey">
+            <p>Das Licht im ausgehöhlten Kürbis soll den Teufel und böse Geister fernhalten.</p>
+        </div>
         <p> Der Brauch, Laternen aus Kürbissen zu schnitzen, geht ebenfalls auf eine Legende aus Irland zurück: Als ein Bösewicht namens Jack gestorben war, verwehrte ihm Gott den Zugang zum Himmel. Doch auch in der Hölle war Jack nicht willkommen, denn er hatte den Teufel zu Lebzeiten übers Ohr gehauen. Mit einem Stück Kohle, das er in eine ausgehöhlte Rübe legte, machte sich Jack auf die Suche nach einem Ort, an dem er bleiben konnte.Aus dieser Legende leiteten die Menschen den Glauben ab, dass ein brennendes Stück Kohle in einer Rübe die Macht habe, den Teufel und böse Geister fernzuhalten. Als viele Iren nach Amerika auswanderten, nahmen sie diesen Brauch mit. In den USA war der heimische Kürbis größer und leichter zu bearbeiten als Rüben. So löste er die Rübe als Jack O'Lantern ab - wie die geschnitzte Laterne im englischsprachigen Raum genannt wird.</p>
         <h2>Halloween: Der Handel feiert mit</h2>
         <p>Inzwischen hat der Handel den kommerziellen Wert von Halloween erkannt und bietet ein breites Sortiment an Grusel-Utensilien: von Masken und Kostümen über Gummi-Spinnen und -schädel bis zu Dekorationsartikeln für den Partyraum. Natürlich dürfen auch Kürbisse nicht fehlen - echte, aus Kunststoff oder auch als gedruckte Aufkleber. So wird Halloween auch zu einem Fest in den Kassen der Händler.</p>
